Refactor various maps